--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <title>NH Wordle</title>
+    <title>NH Wordle 6</title>
 </head>
 <body>
 <div class="everything">
@@ -94,7 +94,7 @@
         <button class="key" id="j-key">j</button>
         <button class="key" id="k-key">k</button>
         <button class="key" id="l-key">l</button><br>
-        <button class="actionkey" id="enter">Enter</button>
+        <button class="actionkey" id="enter">Ent</button>
         <button class="key" id="z-key">z</button>
         <button class="key" id="x-key">x</button>
         <button class="key" id="c-key">c</button>
